[package]
name = "luthien-templates"
description = "Luthien plugin which renders Handlebars templates."
version = "0.1.0"
authors = ["Max Niederman <max@maxniederman.com>"]
license = "MIT"
edition = "2018"

[dependencies]
luthien-plugin = { path = "../lib/rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "3.5"
dirs = "3.0"
