[package]
name = "luthien-templates"
description = "Luthien plugin which renders Handlebars templates."
version = "0.2.0-alpha.0"
authors = ["Max Niederman <max@maxniederman.com>"]
license = "MIT"
edition = "2018"

[dependencies]
luthien-plugin = { path = "../lib/rust", version = "0.1", features = ["palette"] }
tera = "1.11"
dirs = "3.0"
color-eyre = "0.5"
